// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with JWT 1`] = `
<div
  className="App"
>
  <main>
    <p
      className="disclaimer"
    >
      Disclaimer: this is a demo website to show the technical capabilities of the EBSI project. We use dummy data! All the public entities are simulated, there is no real interaction with any of them.
    </p>
    <h1
      className="h1"
    >
      European Blockchain Services Infrastructure
    </h1>
    <h2
      className="h2"
    >
      User journey demonstrator
    </h2>
    <p
      className="done"
    >
      To follow the User Journey, you need to use your EU Login account. If you do not have one, you can
       
      <a
        className="App-link"
        href="#"
        tabIndex="-1"
      >
        create one here
      </a>
      .
    </p>
    <ol>
      <li
        className="done"
      >
        European Self-Sovereign Identity
        <h3>
          Open your EBSI Wallet account
        </h3>
        Open the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          EBSI Wallet
        </a>
         
        and setup your EBSI account to follow the user journey. In your wallet, you will create your own Decentralized ID and a set of public-private keys.
      </li>
      <li>
        Federal Government of Belgium
        <h3>
          Get your eID Verifiable Credential
        </h3>
        Open a request on the
         
        <a
          className="App-link"
          href="https://app.ebsi.xyz/demo/belgium-gov"
        >
          Federal Government of Belgium website
        </a>
         
        to get your verifiable ID. The Belgium Gov. verifies the request and issues the ID Verifiable Credential, which will be stored in your wallet. With your digital ID, you get access to other services in EBSI platform.
      </li>
      <li
        className="disabled"
      >
        Flemish Government
        <h3>
          Get your Bachelor Diploma
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          Flemish Government website
        </a>
         
        to get your Bachelor Diploma VC. You need to have a wallet account and an eID VC in it.
      </li>
      <li
        className="disabled"
      >
        Spanish University
        <h3>
          Get your Master Diploma
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          Spanish University website
        </a>
         
        to register for a master's study and to get your Master Diploma VA. You need to have a wallet account, an eID VC and a Bachelor Diploma VC
      </li>
      <li
        className="disabled"
      >
        EU Funding Institution
        <h3>
          Notarize your documents
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          EU Funding website
        </a>
        .
      </li>
    </ol>
    <p>
      <button
        className="button"
        onClick={[Function]}
        type="button"
      >
        Restart user journey
      </button>
    </p>
    <p>
      Optional: you can visit
       
      <a
        className="App-link"
        href="https://ebsi.compell.io/"
      >
        ECA
      </a>
       
      or
       
      <a
        className="App-link"
        href="https://app.ebsi.xyz/notary"
      >
        notary
      </a>
    </p>
  </main>
</div>
`;

exports[`renders correctly with JWT and eID VC issued 1`] = `
<div
  className="App"
>
  <main>
    <p
      className="disclaimer"
    >
      Disclaimer: this is a demo website to show the technical capabilities of the EBSI project. We use dummy data! All the public entities are simulated, there is no real interaction with any of them.
    </p>
    <h1
      className="h1"
    >
      European Blockchain Services Infrastructure
    </h1>
    <h2
      className="h2"
    >
      User journey demonstrator
    </h2>
    <p
      className="done"
    >
      To follow the User Journey, you need to use your EU Login account. If you do not have one, you can
       
      <a
        className="App-link"
        href="#"
        tabIndex="-1"
      >
        create one here
      </a>
      .
    </p>
    <ol>
      <li
        className="done"
      >
        European Self-Sovereign Identity
        <h3>
          Open your EBSI Wallet account
        </h3>
        Open the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          EBSI Wallet
        </a>
         
        and setup your EBSI account to follow the user journey. In your wallet, you will create your own Decentralized ID and a set of public-private keys.
      </li>
      <li
        className="done"
      >
        Federal Government of Belgium
        <h3>
          Get your eID Verifiable Credential
        </h3>
        Open a request on the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          Federal Government of Belgium website
        </a>
         
        to get your verifiable ID. The Belgium Gov. verifies the request and issues the ID Verifiable Credential, which will be stored in your wallet. With your digital ID, you get access to other services in EBSI platform.
      </li>
      <li>
        Flemish Government
        <h3>
          Get your Bachelor Diploma
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="https://app.ebsi.xyz/demo/flemish-gov"
        >
          Flemish Government website
        </a>
         
        to get your Bachelor Diploma VC. You need to have a wallet account and an eID VC in it.
      </li>
      <li
        className="disabled"
      >
        Spanish University
        <h3>
          Get your Master Diploma
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          Spanish University website
        </a>
         
        to register for a master's study and to get your Master Diploma VA. You need to have a wallet account, an eID VC and a Bachelor Diploma VC
      </li>
      <li
        className="disabled"
      >
        EU Funding Institution
        <h3>
          Notarize your documents
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          EU Funding website
        </a>
        .
      </li>
    </ol>
    <p>
      <button
        className="button"
        onClick={[Function]}
        type="button"
      >
        Restart user journey
      </button>
    </p>
    <p>
      Optional: you can visit
       
      <a
        className="App-link"
        href="https://ebsi.compell.io/"
      >
        ECA
      </a>
       
      or
       
      <a
        className="App-link"
        href="https://app.ebsi.xyz/notary"
      >
        notary
      </a>
    </p>
  </main>
</div>
`;

exports[`renders correctly with JWT, eID VC and bachelor VA 1`] = `
<div
  className="App"
>
  <main>
    <p
      className="disclaimer"
    >
      Disclaimer: this is a demo website to show the technical capabilities of the EBSI project. We use dummy data! All the public entities are simulated, there is no real interaction with any of them.
    </p>
    <h1
      className="h1"
    >
      European Blockchain Services Infrastructure
    </h1>
    <h2
      className="h2"
    >
      User journey demonstrator
    </h2>
    <p
      className="done"
    >
      To follow the User Journey, you need to use your EU Login account. If you do not have one, you can
       
      <a
        className="App-link"
        href="#"
        tabIndex="-1"
      >
        create one here
      </a>
      .
    </p>
    <ol>
      <li
        className="done"
      >
        European Self-Sovereign Identity
        <h3>
          Open your EBSI Wallet account
        </h3>
        Open the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          EBSI Wallet
        </a>
         
        and setup your EBSI account to follow the user journey. In your wallet, you will create your own Decentralized ID and a set of public-private keys.
      </li>
      <li
        className="done"
      >
        Federal Government of Belgium
        <h3>
          Get your eID Verifiable Credential
        </h3>
        Open a request on the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          Federal Government of Belgium website
        </a>
         
        to get your verifiable ID. The Belgium Gov. verifies the request and issues the ID Verifiable Credential, which will be stored in your wallet. With your digital ID, you get access to other services in EBSI platform.
      </li>
      <li
        className="done"
      >
        Flemish Government
        <h3>
          Get your Bachelor Diploma
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          Flemish Government website
        </a>
         
        to get your Bachelor Diploma VC. You need to have a wallet account and an eID VC in it.
      </li>
      <li>
        Spanish University
        <h3>
          Get your Master Diploma
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="https://app.ebsi.xyz/demo/spanish-university"
        >
          Spanish University website
        </a>
         
        to register for a master's study and to get your Master Diploma VA. You need to have a wallet account, an eID VC and a Bachelor Diploma VC
      </li>
      <li
        className="disabled"
      >
        EU Funding Institution
        <h3>
          Notarize your documents
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          EU Funding website
        </a>
        .
      </li>
    </ol>
    <p>
      <button
        className="button"
        onClick={[Function]}
        type="button"
      >
        Restart user journey
      </button>
    </p>
    <p>
      Optional: you can visit
       
      <a
        className="App-link"
        href="https://ebsi.compell.io/"
      >
        ECA
      </a>
       
      or
       
      <a
        className="App-link"
        href="https://app.ebsi.xyz/notary"
      >
        notary
      </a>
    </p>
  </main>
</div>
`;

exports[`renders correctly with JWT, eID VC, bachelor VA and Master VA 1`] = `
<div
  className="App"
>
  <main>
    <p
      className="disclaimer"
    >
      Disclaimer: this is a demo website to show the technical capabilities of the EBSI project. We use dummy data! All the public entities are simulated, there is no real interaction with any of them.
    </p>
    <h1
      className="h1"
    >
      European Blockchain Services Infrastructure
    </h1>
    <h2
      className="h2"
    >
      User journey demonstrator
    </h2>
    <p
      className="done"
    >
      To follow the User Journey, you need to use your EU Login account. If you do not have one, you can
       
      <a
        className="App-link"
        href="#"
        tabIndex="-1"
      >
        create one here
      </a>
      .
    </p>
    <ol>
      <li
        className="done"
      >
        European Self-Sovereign Identity
        <h3>
          Open your EBSI Wallet account
        </h3>
        Open the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          EBSI Wallet
        </a>
         
        and setup your EBSI account to follow the user journey. In your wallet, you will create your own Decentralized ID and a set of public-private keys.
      </li>
      <li
        className="done"
      >
        Federal Government of Belgium
        <h3>
          Get your eID Verifiable Credential
        </h3>
        Open a request on the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          Federal Government of Belgium website
        </a>
         
        to get your verifiable ID. The Belgium Gov. verifies the request and issues the ID Verifiable Credential, which will be stored in your wallet. With your digital ID, you get access to other services in EBSI platform.
      </li>
      <li
        className="done"
      >
        Flemish Government
        <h3>
          Get your Bachelor Diploma
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          Flemish Government website
        </a>
         
        to get your Bachelor Diploma VC. You need to have a wallet account and an eID VC in it.
      </li>
      <li
        className="done"
      >
        Spanish University
        <h3>
          Get your Master Diploma
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          Spanish University website
        </a>
         
        to register for a master's study and to get your Master Diploma VA. You need to have a wallet account, an eID VC and a Bachelor Diploma VC
      </li>
      <li>
        EU Funding Institution
        <h3>
          Notarize your documents
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="https://app.ebsi.xyz/demo/eu-funding"
        >
          EU Funding website
        </a>
        .
      </li>
    </ol>
    <p>
      <button
        className="button"
        onClick={[Function]}
        type="button"
      >
        Restart user journey
      </button>
    </p>
    <p>
      Optional: you can visit
       
      <a
        className="App-link"
        href="https://ebsi.compell.io/"
      >
        ECA
      </a>
       
      or
       
      <a
        className="App-link"
        href="https://app.ebsi.xyz/notary"
      >
        notary
      </a>
    </p>
  </main>
</div>
`;

exports[`renders correctly without JWT 1`] = `
<div
  className="App"
>
  <main>
    <p
      className="disclaimer"
    >
      Disclaimer: this is a demo website to show the technical capabilities of the EBSI project. We use dummy data! All the public entities are simulated, there is no real interaction with any of them.
    </p>
    <h1
      className="h1"
    >
      European Blockchain Services Infrastructure
    </h1>
    <h2
      className="h2"
    >
      User journey demonstrator
    </h2>
    <p>
      To follow the User Journey, you need to use your EU Login account. If you do not have one, you can
       
      <a
        className="App-link"
        href="https://ecas.ec.europa.eu/cas/eim/external/register.cgi"
      >
        create one here
      </a>
      .
    </p>
    <ol>
      <li>
        European Self-Sovereign Identity
        <h3>
          Open your EBSI Wallet account
        </h3>
        Open the
         
        <a
          className="App-link"
          href="https://app.ebsi.xyz/wallet"
        >
          EBSI Wallet
        </a>
         
        and setup your EBSI account to follow the user journey. In your wallet, you will create your own Decentralized ID and a set of public-private keys.
      </li>
      <li
        className="disabled"
      >
        Federal Government of Belgium
        <h3>
          Get your eID Verifiable Credential
        </h3>
        Open a request on the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          Federal Government of Belgium website
        </a>
         
        to get your verifiable ID. The Belgium Gov. verifies the request and issues the ID Verifiable Credential, which will be stored in your wallet. With your digital ID, you get access to other services in EBSI platform.
      </li>
      <li
        className="disabled"
      >
        Flemish Government
        <h3>
          Get your Bachelor Diploma
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          Flemish Government website
        </a>
         
        to get your Bachelor Diploma VC. You need to have a wallet account and an eID VC in it.
      </li>
      <li
        className="disabled"
      >
        Spanish University
        <h3>
          Get your Master Diploma
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          Spanish University website
        </a>
         
        to register for a master's study and to get your Master Diploma VA. You need to have a wallet account, an eID VC and a Bachelor Diploma VC
      </li>
      <li
        className="disabled"
      >
        EU Funding Institution
        <h3>
          Notarize your documents
        </h3>
        Visit the
         
        <a
          className="App-link"
          href="#"
          tabIndex="-1"
        >
          EU Funding website
        </a>
        .
      </li>
    </ol>
    <p>
      Optional: you can visit
       
      <a
        className="App-link"
        href="https://ebsi.compell.io/"
      >
        ECA
      </a>
       
      or
       
      <a
        className="App-link"
        href="https://app.ebsi.xyz/notary"
      >
        notary
      </a>
    </p>
  </main>
</div>
`;
